--- a/styles/index.html
+++ b/styles/index.html
@@ -15,6 +15,7 @@
         <section class="description">
             <h2>Descripción del juego</h2>
             <b>Ulises 10 DE ABRIL 8:55AM</b>
+            <b>Buenas noches</b>
             <p>Helldivers 2 es un videojuego de disparos cooperativo en tercera persona desarrollado por Arrowhead Game Studios y publicado por Sony Interactive Entertainment en febrero de 2024. El juego es la secuela directa de Helldivers, un top-down shooter de 2015</p>
         </section>
         <section class="images">
